# etl-satiapp-home

./: README.md  etl.py  pyproject.toml
config/: settings.py
data/: README.txt
etl/: __init__.py  extractor.py  loader.py  transformer.py  uploader.py  validator.py
